--- a/_app/css/base.css
+++ b/_app/css/base.css
@@ -1,6 +1,11 @@
 body {
 	display: flex;
 	flex-direction: column;
-	justify-items: center;
+	justify-content: center;
 	padding: 1rem;
+	background-color: black;
+}
+
+h1 {
+	color: cornsilk;
 }
