--- a/_app/css/modules/eventContainer.css
+++ b/_app/css/modules/eventContainer.css
@@ -5,7 +5,7 @@
 	grid-template-columns: 1, minmax(0,1fr);
 	grid-column-gap: 2vw;
 	grid-row-gap: 4vw;
-	margin: 2vw 5vw;
+	margin: 2vw 3vw;
 	/* background-color: white; */
 
 }
@@ -23,14 +23,14 @@
 	/* background-color: blueviolet; */
 	width: 100%;
 	height: 100%;
-	padding: 0.5rem 0.5rem 0 0.5rem;
+	/* padding: 0.5rem 0.5rem 0 0.5rem; */
 }
 
 .event__image {
 	width: 100%;
 	height: auto;
 	overflow: hidden;
-	border-radius: 25px 0;
+	/* border-radius: 25px 0; */
 	object-fit: cover;
 }
 
