--- a/_app/css/modules/eventContainer.css
+++ b/_app/css/modules/eventContainer.css
@@ -1,74 +1,29 @@
-/* mobile first */
-
-.event__container {
-	display: grid;
-	grid-template-columns: 1, minmax(0,1fr);
-	grid-column-gap: 2vw;
-	grid-row-gap: 4vw;
-	margin: 2vw 3vw;
-	/* background-color: white; */
-
-}
-
 .event__container-card {
-	display: flex;
-	width: 100%;
-	flex-direction: column;
 	background-color: lightgray;
-	padding-bottom: 1rem;
-	margin-bottom: 1rem;
-}
-
-.event__image-box {
-	/* background-color: blueviolet; */
-	width: 100%;
 	height: 100%;
-	/* padding: 0.5rem 0.5rem 0 0.5rem; */
 }
 
 .event__image {
 	width: 100%;
-	height: auto;
-	overflow: hidden;
-	/* border-radius: 25px 0; */
+	align-content: center;
+}
+
+.event__img {
+	height: 100%;
 	object-fit: cover;
 }
 
 .event__content {
 	display: flex;
 	flex-direction: column;
-	/* background-color: orange; */
-	padding: 0.5rem 1rem;
 }
 
 .event__artist {
 	color: aquamarine;
 	font-family: 'Inder', sans-serif;
-	font-size: 3.5vw;
+	font-size: 2vw;
 }
 
 .event__location {
 	color: white;
-}
-
-
-/* tablet */
-
-@media screen and (min-width: 480px) {
-	.event__container {
-		grid-template-columns: repeat(2, minmax(0,1fr));
-	}
-
-	.event__image {
-		height: 200px;
-	}
-}
-
-
-/* desktop */
-
-@media screen and (min-width: 900px) {
-	.event__container {
-		grid-template-columns: repeat(3, minmax(0,1fr));
-	}
 }
