--- a/_app/css/modules/header.css
+++ b/_app/css/modules/header.css
@@ -2,6 +2,7 @@
 	grid-column: 1 / 13;
 	width: 100%;
 	margin-bottom: 1rem;
+	align-items: baseline;
 }
 
 .header__text {
@@ -10,5 +11,5 @@
 
 .header__city {
 	font-family: 'Inder', sans-serif;
-	color: #7fffd4;
+	color: var(--color-font-logo);
 }
